# diffusionLM

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  generate.py  generate.sh  generate_llada.py  generate_llada.sh  modeling_llada.py  pretrain_llada.py  pretrain_llada.sh  pretrain_llada_utils.py  pyproject.toml
.github/workflows/: docker-build.yml
benchmarking/: bench_infer_latency.py  bench_tokenizer.py
checkpointing/: README.md  __init__.py  manager.py  manifest.py  state.py  storage.py
cli/: infer.py  infer_image.py  make_data.py  sweep_infer.py  sweep_train.py  train.py  train_ddp.py  train_tokenizer.py
config/: __init__.py  bench_infer.py  bench_tokenizer.py  infer.py  infer_image.py  io.py  schemas.py  sweep_infer.py  train.py  validate.py
config/resources/: bench_infer.toml  bench_tokenizer.toml  infer.toml  infer_mnist.toml  infer_mnist_categorical_flow.toml  infer_mnist_flow.toml  make_data.toml  muon.toml  sweep_infer.toml  train.toml  train_ddp.toml  train_mnist.toml  train_mnist_categorical_flow.toml  train_mnist_flow.toml  train_mnist_semicat.toml  train_muon.toml  train_tokenizer.toml
config/resources/wandb/: train_sweep.yaml
ddp/: __init__.py  ddp.py  optimizer_state_sharding.py  utils.py
diffusionlm/: __init__.py  builders.py
diffusionlm/inference/: __init__.py  generate.py  predictor.py  sampling.py
diffusionlm/models/: attention.py  transformer.py
diffusionlm/models/instrumented/: attention.py  transformer.py
diffusionlm/tokenizer/: README.md  __init__.py  bpe_trainer.py  io.py  tokenizer.py
diffusionlm/tokenizer_rust/: Cargo.toml
diffusionlm/tokenizer_rust/src/: lib.rs  tests.rs  tokenizer.rs  tokenizer_cli.rs
diffusionlm/train/: pretrain_llada.py
diffusionlm/training/: __init__.py  data.py  loop.py  loss.py  optim.py  schedule.py  streaming.py  trainer.py
docker/: Dockerfile
env/: checkpointing.env.example  wandb.env.example
logger/: __init__.py  console_logger.py  noop.py  rank_zero.py  wandb_logger.py
old/: .gitignore  README.md  pyproject.toml
old/diffusionlm/infer/: generate_llada.py
old/diffusionlm/model/: tokenizer.py
old/scripts/: generate_llada.sh
scripts/: bootstrap_remote.sh  check_checkpointing.sh  fetch_data.sh  infer_all_labels.sh  infer_all_null_labels.sh  infer_mnist_all_ckpts_labels.sh  infer_sweep_cfg_temp_labels.sh  pretrain_llada.sh  preview_mnist_binned_dataloader.sh  run_infer_remote.sh  run_sweep_train_remote.sh  run_train_remote.sh  startup.sh
tests/: conftest.py
tests/config/: test_config.py
tests/data/tokenizer/: merges.txt  special_tokens.json  vocab.json
tests/fixtures/: __init__.py  toy_language_modeling.py
tests/helpers/: __init__.py  training_runner.py
tests/inference/: test_diffusion_generate.py  test_sampling.py
tests/tokenizer/: test_tokenizer.py
tests/training/: test_categorical_flow_objective.py  test_data.py  test_flow_matching_objective.py  test_image_null_label_dropout.py  test_image_quantization.py  test_loss.py  test_objective_build.py  test_semicat_objective.py  test_streaming.py  test_trainer_parity.py
tests/transformer/: test_attention.py  test_layers.py  test_lm.py
tests/utils/: test_train_utils.py
trainkit/: README.md  __init__.py  trainer.py
trainkit/checkpointing/: __init__.py
trainkit/data/: __init__.py  image.py  megatron_indexed.py  streaming.py
trainkit/ddp/: __init__.py  optimizer_state_sharding.py
trainkit/inference/: __init__.py  generate.py  sampling.py
trainkit/logger/: __init__.py  base.py  rank_zero.py  wandb_logger.py
trainkit/objectives/: __init__.py  autoregressive.py  base.py  categorical_flow.py  data.py  diffusion.py  joint.py  loss.py  schedule.py  semicat.py
trainkit/training/: __init__.py  loop.py  optim.py  schedule.py
transformerlm/: builders.py
transformerlm/inference/: predictor.py
transformerlm/models/: __init__.py  attention.py  layers.py  transformer.py
transformerlm/models/instrumented/: __init__.py  attention.py  transformer.py
transformerlm/tokenizer/: README.md  __init__.py  bpe_trainer.py  tokenizer.py
transformerlm/tokenizer_rust/: Cargo.toml
transformerlm/tokenizer_rust/src/: lib.rs  tests.rs
transformerlm/training/: trainer.py
