[project]
name = "diffusionLM"
version = "1.0.0"
description = "Exploring Diffusion Language Models"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "torch",
    "regex>=2024.11.6",
    "tqdm>=4.67.1",
]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]