[package]
name = "tokenizer-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
serde_json = "1.0"
regex = "1.12.2"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
cli = []

[[bin]]
name = "tokenizer_cli"
path = "src/tokenizer_cli.rs"
required-features = ["cli"]
